--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Say What? - Party Game</title>
+    <title>Say What!? - Party Game</title>
     <style>
         :root {
             --bg: #000000;
@@ -131,7 +131,7 @@
 </head>
 <body>
 
-<header><h1>SAY WHAT?</h1></header>
+<header><h1>SAY WHAT!?</h1></header>
 
 <div class="category-bar" id="cat-bar"></div>
 
