Update title and header for Family Edition

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Say What? - 10+ Edition</title>
+    <title>Say Whaaat? - Family Edition</title>
     <style>
         :root {
             --bg: #0f172a;
@@ -131,7 +131,7 @@
 </head>
 <body>
 
-<header><h1>SAY WHAT? 10+ EDITION</h1></header>
+<header><h1>SAY WHAT? FAMILY EDITION</h1></header>
 
 <div class="timer-container" id="timer">60s</div>
 
